# mathcomp-word

./: dune-project
.github/workflows/: ci.yml
src/: dune
