(coq.theory
 (name mathcomp.word)
 (theories elpi elpi_elpi HB mathcomp.ssreflect mathcomp.fingroup mathcomp.algebra)
 (plugins elpi)
 (package coq-mathcomp-word)
 (flags -w -ambiguous-paths
        -w -hiding-delimiting-key
        -w -notation-overridden
        -w -redundant-canonical-projection
        -w -projection-no-head-constant))
